Keyframes of Compositing Nodes get deleted when muting that node #38221

Closed
opened 2014-01-14 22:27:52 +01:00 by Christian Elsässer · 15 comments

System Information
Windows 8.1
NVIDIA GeForce GTX 660M - 2GB
i7-3740 QM @ 2.7GHz
16gb RAM

Blender Version
Broken: 2.69.0 r60995

Short description of error
When any value of a Compositing Node is keyframed everything works as expected. If that node now gets muted all keyframes of that node are cleared. when unmuting that node again keyframes are still gone. when pressing CTRL Z, the keyframes are back there (node is muted again) ... unmuting then won't clear the keyframes.

This Bug just affects compositing nodes and keyframes... shader nodes and texture nodes work fine, as well as drivers on compositing nodes don't get deleted.

Exact steps for others to reproduce the error
open node editor
switch to compositing nodes
tick "use nodes"
add any node (i confirmed this bug with mix, alpha over, invert, HSV, RGB Curver, so i guess all compositing nodes are affected)
while hovering over a numeric value press "i" to add a keyframe ==> turns yellow
mute that node by pressing "m" ==> turns grey

optional:
unmute that node by pressing "m" again ==> stays grey
CTRL Z ==> note is muted again, keyframes are back in position (fields are yellow)
unmute that node by pressing "m" again ==> keyframes stay there ==> field stays yellow

**System Information** Windows 8.1 NVIDIA GeForce GTX 660M - 2GB i7-3740 QM @ 2.7GHz 16gb RAM **Blender Version** Broken: 2.69.0 r60995 **Short description of error** When any value of a Compositing Node is keyframed everything works as expected. If that node now gets muted all keyframes of that node are cleared. when unmuting that node again keyframes are still gone. when pressing CTRL Z, the keyframes are back there (node is muted again) ... unmuting then won't clear the keyframes. This Bug just affects compositing nodes and keyframes... shader nodes and texture nodes work fine, as well as drivers on compositing nodes don't get deleted. **Exact steps for others to reproduce the error** open node editor switch to compositing nodes tick "use nodes" add any node (i confirmed this bug with mix, alpha over, invert, HSV, RGB Curver, so i guess all compositing nodes are affected) while hovering over a numeric value press "i" to add a keyframe ==> turns yellow mute that node by pressing "m" ==> turns grey optional: unmute that node by pressing "m" again ==> stays grey CTRL Z ==> note is muted again, keyframes are back in position (fields are yellow) unmute that node by pressing "m" again ==> keyframes stay there ==> field stays yellow

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ChristianElsasser

Added subscriber: @ChristianElsasser

#38286 was marked as duplicate of this issue

#38286 was marked as duplicate of this issue
Member

Added subscribers: @LukasTonne, @plasmasolutions

Added subscribers: @LukasTonne, @plasmasolutions
Member

I can confirm that, seems like the keyframe data is deleted then...

@LukasTonne I will look into this after my pc is running again (tomorrow)
@ChristianElsasser thanks for reporting!

I can confirm that, seems like the keyframe data is deleted then... @LukasTonne I will look into this after my pc is running again (tomorrow) @ChristianElsasser thanks for reporting!
Thomas Beck self-assigned this 2014-01-15 11:49:15 +01:00

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly

◀ Merged tasks: #38286.

◀ Merged tasks: #38286.

Added subscriber: @mont29

Added subscriber: @mont29

Thanks mont29 for identifying my report as a duplicate. Sorry I didn't catch it. I did search with similar keywords before submitting, I swear. At least better to get reported twice than never at all though. ;-)

Thanks mont29 for identifying my report as a duplicate. Sorry I didn't catch it. I did search with similar keywords before submitting, I swear. At least better to get reported twice than never at all though. ;-)
Member

@mont29 or @LukasTonne: Could one of you look into this and take ownership of this bug? As my PC is still broken I can't fix this issue.. writing from my mobile phone now..Thanks!

@mont29 or @LukasTonne: Could one of you look into this and take ownership of this bug? As my PC is still broken I can't fix this issue.. writing from my mobile phone now..Thanks!
Thomas Beck was unassigned by Lukas Tönne 2014-01-20 12:21:57 +01:00
Lukas Tönne self-assigned this 2014-01-20 12:21:57 +01:00
Member

This is related to the anim fcurves cleanup, which is supposed to remove fcurves for deleted nodes:
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/node.c;1b3fdc43095d8d0a7dff9adf5c93dbad81a85576$1620

Possibly this happens when localized node trees from the compo preview job get deleted, although these should not be touching the original tree's animdata ...

This is related to the anim fcurves cleanup, which is supposed to remove fcurves for deleted nodes: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/node.c;1b3fdc43095d8d0a7dff9adf5c93dbad81a85576$1620 Possibly this happens when localized node trees from the compo preview job get deleted, although these should not be touching the original tree's animdata ...

This issue was referenced by blender/blender-addons-contrib@f70921d90c

This issue was referenced by blender/blender-addons-contrib@f70921d90ccbaf6d54f5bcc90a9ef665d9001361

This issue was referenced by f70921d90c

This issue was referenced by f70921d90ccbaf6d54f5bcc90a9ef665d9001361
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit f70921d90c.

Closed by commit f70921d90c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38221
No description provided.